--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     box-sizing: border-box;
 }
 
-        body { font-family: sans-serif; background: #121212; color: white; margin: 0; }
+        body { font-family: sans-serif; background: #f4ecd8; color: white; margin: 0; }
         .screen { display: none; padding: 20px; }
         
         /* State Switcher Lógica */
