Change title to 'Multiversy' and update donation message
Updated the title and donation alert message in index.html.

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <div class="btn-ehb" onclick="abrirDoacao()">EHB</div>
 
     <div id="screen-home" class="screen">
-        <h2 style="color: #5d4a37;">📚 Mural de Obras EHB</h2>
+        <h2 style="color: #5d4a37;">📚 Multiversy</h2>
         
         <input type="text" id="campoBusca" placeholder="🔍 Pesquisar título ou autor..." onkeyup="filtrarMural()">
         
@@ -269,7 +269,7 @@
             } catch (e) { alert("Erro ao excluir."); }
         }
 
-        function abrirDoacao() { alert("EHB Library - Apoie a cultura livre!"); }
+        function abrirDoacao() { alert("EHB Library - Apoie o crescimento para os escritores, faça sua doação para melhorar o desenvolvimento do ecossistema. Chave pix: lusther3dmult@gmail.com ou envie cripto para o endereço de wallet: 0x2ea5d9c734ac06d639d3e4b70ae4c1e163b48555 rede Polygon !"); }
         window.onload = () => { mudarTela('home'); };
     </script>
 </body>
