Add new genre buttons and options to index.html

--- a/index.html
+++ b/index.html
@@ -107,6 +107,19 @@
             <button class="btn-filtro" onclick="filtrarPorGenero('Ficção Científica')">🚀 Ficção</button>
             <button class="btn-filtro" onclick="filtrarPorGenero('Terror')">👻 Terror</button>
             <button class="btn-filtro" onclick="filtrarPorGenero('Mistério')">🔍 Mistério</button>
+
+            <button class="btn-filtro" onclick="filtrarPorGenero('Fantasia')">🦄Fantasia</button>
+
+            <button class="btn-filtro" onclick="filtrarPorGenero('Drama')">🤦‍♂️ Drama</button>
+
+           <button class="btn-filtro" onclick="filtrarPorGenero('Biografia')">🤱 Biografia</button>
+
+<button class="btn-filtro" onclick="filtrarPorGenero('Dark Romance')"> 🖤Dark Romance</button>
+
+
+
+
+
         </div>
 
         <button onclick="mudarTela('editor')" style="margin-bottom: 20px; background: #228b22;">✍️ Publicar Nova Obra</button>
@@ -128,6 +141,18 @@
             <option value="Terror">👻 Terror</option>
             <option value="Quadrinhos">🎨 Quadrinhos</option>
             <option value="Mistério">🔍 Mistério</option>
+
+            <option value="Fantasia">🦄Fantasia</option>
+
+            <option value="Drama">🤦‍♂️ Drama</option>
+
+            <option value="Biografia">🤱 Biografia</option>
+
+            <option value="Dark Romance"> 🖤 Dark Romance</option>
+
+
+
+
         </select>
         <textarea id="sinopse" placeholder="Sinopse"></textarea>
         <textarea id="conteudo" rows="10" placeholder="Escreve o início da obra..."></textarea>
