Add buttons and options for Culinária and Esportes

--- a/index.html
+++ b/index.html
@@ -111,6 +111,8 @@
             <button class="btn-filtro" onclick="filtrarPorGenero('Mistério')">🔍 Mistério</button>
             <button class="btn-filtro" onclick="filtrarPorGenero('Fantasia')">🦄 Fantasia</button>
             <button class="btn-filtro" onclick="filtrarPorGenero('Dark Romance')">🖤 Dark Romance</button>
+            <button class="btn-filtro" onclick="filtrarPorGenero('Culinária')">🍝 Culinária</button>
+            <button class="btn-filtro" onclick="filtrarPorGenero('Esportes')">🏟️ Esportes</button>
         </div>
         
         <button class="btn-publicar-mural" onclick="mudarTela('editor')">✍️ Publicar Nova Obra</button>
@@ -153,6 +155,8 @@
             <option value="Mistério">🔍 Mistério</option>
             <option value="Fantasia">🦄 Fantasia</option>
             <option value="Dark Romance">🖤 Dark Romance</option>
+            <option value="Culinária">🍝 Culinária</option>
+            <option value="Esportes">🏟️ Esportes</option>
         </select>
         <textarea id="sinopse" placeholder="Sinopse"></textarea>
         <textarea id="conteudo" rows="10" placeholder="Escreve o início da obra..."></textarea>
