--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
             font-size: 16px;
         }
 
+        button { background: #ff4500; color: white; border: none; padding: 15px; width: 40%; cursor: pointer; font-weight: bold; border-radius: 5px; margin-top: 5px;}
+        
+
         .header-perfil { text-align: center; padding: 30px 20px; background: #2c251e; color: white; border-radius: 15px; margin-bottom: 20px; position: relative; }
         .foto-container { position: relative; width: 100px; height: 100px; margin: 0 auto 15px; }
         #foto-exibida { width: 100%; height: 100%; border-radius: 50%; object-fit: cover; border: 3px solid #ff4500; background: #444; }
