Modify donation alert to include more details
Updated donation alert message with additional information.

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
             renderizarMural(genero === 'Todos' ? Object.values(todasAsObras) : Object.values(todasAsObras).filter(o => o.genero === genero));
         }
 
-        function abrirDoacao() { alert("Pix: lusther3dmult@gmail.com"); }
+        function abrirDoacao() { alert("Faça sua doação para o crescimento dessa startup, não importa o valor, isso ajudará a equipe comtinuar desenvolvendo e investindo em mais tecnologias! Chave pix: lusther3dmult@gmail.com"); }
 
         window.onload = () => { carregarLivraria(); mudarTela('home'); };
     </script>
