--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
     const filtradas = Object.values(todasAsObras).filter(o => 
         o.titulo.toLowerCase().includes(termo) || o.autor.toLowerCase().includes(termo)
     );
-    renderizarMural(filtradas, 'lista-obras');
+    renderizarMural(filtradas);
         }
           
 
