--- a/index.html
+++ b/index.html
@@ -91,7 +91,54 @@
         .stats-perfil { display: flex; justify-content: space-around; margin-top: 15px; border-top: 1px solid #444; padding-top: 15px; }
         .stat-item { text-align: center; font-size: 12px; }
         .stat-item b { display: block; font-size: 16px; color: #ff4500; }
+
+
+
+
+.nav-bar-container {
+    display: flex;
+    align-items: center;
+    background: #ffffff;
+    border: 1px solid #dcd0b9;
+    border-radius: 50px; /* Formato de pílula */
+    padding: 8px 15px;
+    margin: 15px 0;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+}
+
+.nav-bar-icon {
+    color: #888;
+    margin-right: 10px;
+    font-size: 14px;
+}
+
+.nav-bar-button {
+    flex: 1;
+    background: none;
+    border: none;
+    text-align: left;
+    color: #332b22;
+    font-size: 14px;
+    font-family: sans-serif;
+    cursor: pointer;
+    padding: 0;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.nav-bar-action {
+    color: #ff4500;
+    font-weight: bold;
+    font-size: 18px;
+    margin-left: 10px;
+}
+        
+
+
     </style>
+
+    
 </head>
 <body data-screen="home">
 
