--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     <div class="btn-perfil-float" onclick="mudarTela('perfil')">👤</div>
 
 
-    <div class="nav-bar-container" id="btnNavegar" onclick="irParaPagina('outra_pagina.html')">
+    <div class="nav-bar-container" id="btnNavegar" onclick="irParaPagina('navegador.html')">
     <span class="nav-icon">🔒</span>
     <div class="loader"></div> <span class="nav-text">multiversy.app/nova-pagina</span>
     <span style="color: #ff4500; font-weight: bold;">➜</span>
