--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
     <div class="nav-bar-container" id="btnNavegar" onclick="irParaPagina('navegador.html')">
     <span class="nav-icon">🔒</span>
-    <div class="loader"></div> <span class="nav-text">multiversy.app/nova-pagina</span>
+    <div class="loader"></div> <span class="nav-text">multiversy.app/browser</span>
     <span style="color: #ff4500; font-weight: bold;">➜</span>
     </div>
     
