--- a/multiversy.html
+++ b/multiversy.html
@@ -84,7 +84,7 @@
         <span class="btn-label">Game</span>
     </div>
 
-    <div class="btn-wrapper" data-url="livraria.html">
+    <div class="btn-wrapper" data-url="index.html">
         <div class="btn-round"><img src="3.jpg"></div>
         <span class="btn-label">Livraria</span>
     </div>
