--- a/livraria.html
+++ b/livraria.html
@@ -197,7 +197,7 @@
 
     <div id="screen-home" class="screen">
         <h2 style="color: #5d4a37; display: flex; align-items: center; gap: 8px;">
-            <span style="font-size: 24px;">📚</span> Multiversy
+            <span style="font-size: 24px;">📚</span> Livraria
         </h2>
 
         <button class="btn-voltar" onclick="window.location.href='index.html'">
