--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
     <div class="btn-wrapper" data-url="indisponivel.html">
         <div class="btn-round"><img src="8.jpg"></div>
-        <span class="btn-label">Indisponível</span>
+        <span class="btn-label">By Stylus</span>
     </div>
     <div class="btn-wrapper" data-url="indisponivel.html">
         <div class="btn-round"><img src="9.jpg"></div>
