--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
     <div class="btn-wrapper" data-url="noticias.html">
         <div class="btn-round"><img src="5.jpg"></div>
-        <span class="btn-label">Notícias</span>
+        <span class="btn-label">Ranking</span>
     </div>
 
     <div class="btn-wrapper" data-url="pesquisas.html">
@@ -112,12 +112,12 @@
 
     <div class="btn-wrapper" data-url="exploracao.html">
         <div class="btn-round"><img src="7.jpg"></div>
-        <span class="btn-label">Exploração</span>
+        <span class="btn-label">Ferramentas</span>
     </div>
 
     <div class="btn-wrapper" data-url="indisponivel.html">
         <div class="btn-round"><img src="8.jpg"></div>
-        <span class="btn-label">By Stylus</span>
+        <span class="btn-label">Impressão 3D</span>
     </div>
     <div class="btn-wrapper" data-url="indisponivel.html">
         <div class="btn-round"><img src="9.jpg"></div>
