--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
     <div class="btn-wrapper" data-url="pesquisas.html">
         <div class="btn-round"><img src="6.jpg"></div>
-        <span class="btn-label">Pesquisas</span>
+        <span class="btn-label">Pesquisas científicas</span>
     </div>
 
     <div class="btn-wrapper" data-url="exploracao.html">
