--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <span class="btn-label">Ranking</span>
     </div>
 
-    <div class="btn-wrapper" data-url="pesquisas.html">
+    <div class="btn-wrapper" data-url="navegador.html">
         <div class="btn-round"><img src="6.jpg"></div>
         <span class="btn-label">Pesquisas científicas</span>
     </div>
